fix: send email payload to snake case
